--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ h3 {
 <h2 >Winners</h2>
 
 <div class="card">
-  <img src="https://codingwithaibal.github.io/5/4.jpg" alt="Avatar" style="width:100%">
+  <img src="1.jpg" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b></b></h4> 
     <p>1st Place</p> 
@@ -54,14 +54,14 @@ h3 {
 <h2></h2>
 
 <div class="card">
-  <img src="https://codingwithaibal.github.io/5/4.jpg" alt="Avatar" style="width:100%">
+  <img src="2.jpg" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b></b></h4> 
     <p>2th Place</p> 
   </div>
 </div>
 <div class="card">
-  <img src="https://codingwithaibal.github.io/5/4.jpg" alt="Avatar" style="width:100%">
+  <img src="3.jpg" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b></b></h4> 
     <p>3td place</p> 
