--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h3 {
 <div class="card">
   <img src="1.jpg" alt="Avatar" style="width:100%">
   <div class="container">
-    <h4><b></b></h4> 
+    <h4><b>Tiswin Twins</b></h4> 
     <p>1st Place</p> 
   </div>
 </div>
@@ -56,14 +56,15 @@ h3 {
 <div class="card">
   <img src="2.jpg" alt="Avatar" style="width:100%">
   <div class="container">
-    <h4><b></b></h4> 
+    <h4><b>Adona Mary Shaji</b></h4> 
     <p>2th Place</p> 
   </div>
 </div>
 <div class="card">
   <img src="3.jpg" alt="Avatar" style="width:100%">
   <div class="container">
-    <h4><b></b></h4> 
+    <h4><b>Neha Johnson </b></h4> 
+    
     <p>3td place</p> 
   </div>
 </div>
