--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ h3 {
   <img src="1.jpg" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b>Tiswin Twins</b></h4> 
-    <p>1st Place</p> 
+    <p>1st prize</p> 
   </div>
 </div>
 <h2></h2>
@@ -57,7 +57,7 @@ h3 {
   <img src="2.jpg" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b>Adona Mary Shaji</b></h4> 
-    <p>2th Place</p> 
+    <p>2nd prize/p> 
   </div>
 </div>
 <div class="card">
@@ -65,7 +65,7 @@ h3 {
   <div class="container">
     <h4><b>Neha Johnson </b></h4> 
     
-    <p>3td place</p> 
+    <p>2nd prize</p> 
   </div>
 </div>
 
