--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
   <!-- Code by Angela Delise 
   https://codepen.io/angeladelise/pen/xxGoaXe
