--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class='banner-img'></div>
       <img src='ss3.jpg' alt='profile image' class="profile-img">
       <p class="name">Christo Siju</p>
-      <p class="description">Scored 24/25----Class:7, congratulaions Athul</p>
+      <p class="description">Scored 24/25----Class:7, congratulaions Christo</p>
       <button class='btn'>2'nd prize </button>
     </div>
 
@@ -79,7 +79,7 @@
         <div class='banner-img'></div>
         <img src='ss4.jpg' alt='profile image' class="profile-img">
         <p class="name">Tiswin Twins</p>
-        <p class="description">Scored 24/25----Class:9, congratulaions Athul</p>
+        <p class="description">Scored 24/25----Class:9, congratulaions Tiswin</p>
         <button class='btn'>2'nd prize </button>
       </div>
 
