--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 
-    <h1 style="color:#E37A77FE;font-size:45px;">Winners</h1> <h3 id="demo"  style="color:#E37A77FE;font-size:40px;" ></h3>   <p style="color:#E37A77FE;font-size:30px;"> .</p>
+    <h1 style="color:#7789e3fe;font-size:45px;">Winners</h1> <h3 id="demo"  style="color:#E37A77FE;font-size:18px;" ></h3>   <p style="color:#E37A77FE;font-size:30px;"></p>
 
 
 
